# Valkyrie9plus

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  F28062F.cmd  F28062F_flash.cmd  F28069M.cmd  LICENSE  README.md  Valkyrie9plus.c  proj_utils.c  proj_utils.h  version.py
.launches/: Valkyrie9plus.launch  Valkyrie9plus_062F.launch  ipm_lab09a.launch
cmake/: mw-src.cmake  options.cmake  toolchain-ti-c2000.cmake
include/ADC_temp/: ADC_temp.h
include/beep/: beep.c  beep.h  note_build.py
include/board/: board_EPC9167_j1.h  board_EPC9173_j1.h  board_EPC9186_j1.h  board_can_foc.h  board_ka2000_EPC9146.h  board_ka2000_EPC9167.h  board_ka2000_EPC9186.h  board_tms320f28069m_8301_j1.h  board_tms320f28069m_8301_j5.h  board_tms320f28069m_8305_j1.h  board_tms320f28069m_8305_j5.h  board_tms320f28069m_8323H_j1.h  board_tms320f28069m_8323_j1.h  board_tms320f28069m_8323_j5.h
include/can/: can.c  can.h
include/ctrl/: ctrl.c  ctrl.h
include/dronecan/: dronecan.c  dronecan.h  to_string.c  to_string.h
include/drv83xx/: drv8301.c  drv8301.h  drv8305.c  drv8305.h  drv8323.c  drv8323.h  drv83xx.c  drv83xx.h
include/dsdlc_generated/include/: uavcan.CoarseOrientation.h  uavcan.Timestamp.h  uavcan.equipment.actuator.ArrayCommand.h  uavcan.equipment.actuator.Command.h  uavcan.equipment.actuator.Status.h  uavcan.equipment.ahrs.MagneticFieldStrength.h  uavcan.equipment.ahrs.MagneticFieldStrength2.h  uavcan.equipment.ahrs.RawIMU.h  uavcan.equipment.ahrs.Solution.h  uavcan.equipment.air_data.AngleOfAttack.h  uavcan.equipment.air_data.IndicatedAirspeed.h  uavcan.equipment.air_data.RawAirData.h  uavcan.equipment.air_data.Sideslip.h  uavcan.equipment.air_data.StaticPressure.h  uavcan.equipment.air_data.StaticTemperature.h  uavcan.equipment.air_data.TrueAirspeed.h  uavcan.equipment.camera_gimbal.AngularCommand.h  uavcan.equipment.camera_gimbal.GEOPOICommand.h  uavcan.equipment.camera_gimbal.Mode.h  uavcan.equipment.camera_gimbal.Status.h  uavcan.equipment.device.Temperature.h  uavcan.equipment.esc.RPMCommand.h  uavcan.equipment.esc.RawCommand.h  uavcan.equipment.esc.Status.h  uavcan.equipment.esc.StatusExtended.h  uavcan.equipment.gnss.Auxiliary.h  uavcan.equipment.gnss.ECEFPositionVelocity.h  uavcan.equipment.gnss.Fix.h  uavcan.equipment.gnss.Fix2.h  uavcan.equipment.gnss.RTCMStream.h  uavcan.equipment.hardpoint.Command.h  (+72 more)
include/fifo/: fifo.h
include/flash_utils/: flash_utils.c  flash_utils.h
include/flyingStart/: flyingStart.c  flyingStart.h
include/hal/: hal.c  hal.h  hal_obj.h
include/libcanard/: CMakeLists.txt  canard.c  canard.h  canard_internals.h  show_data_type_info.py
include/main/: main.h
include/motor/: motor_5010_750KV.h  motor_Anaheim_BLY172S.h  motor_Anaheim_Salient.h  motor_B2212_920.h  motor_Belt_Drive_Washer_IPM.h  motor_Bluerobotics_t200.h  motor_Eflite_power10.h  motor_Estun_EMJ_04APB22.h  motor_HACKER_A40_14L.h  motor_Marathon_5K33GN2A.h  motor_Teknic_M2310PLN04K.h
include/pie/: pie.c  pie.h
include/spi/: spi.c  spi.h
include/types/: types.h
include/user/: user.c  user.h  userParams.h  user_config.h  user_hw_select.h
(+149 files in other folders)
